# C-programming

./: README.md  a.out  argv.c  func.c  guess.c  hcs.c  number.c  phone.c  readability.c  score.c  scrabble.c  secrate.c
Calculator/: meson.build  org.example.App.json
Calculator/build-aux/meson/: postinstall.py
Calculator/data/: org.example.App.gschema.xml
Calculator/po/: POTFILES
Calculator/src/: calculator-window.c  calculator-window.h  calculator-window.ui  calculator.gresource.xml  main.c  meson.build
